		* Split most functions into Vector3 and Vector4 code
		* Removed obsolete, unused, or only for ancient compiler defines
	* Netservices Framework: Changed useragent from "Zombono" to "EuphoriaEngine"
	* Netservices Framework: Added HTTP POST as well as GET support
	* UI: Added hover and pressed colours for Box controls
		* Set with the UI_SetColorOnHover and UI_SetColorOnClick functions
	* UI: Added an update event that fires every client frame
	* Changed game binary name to be EuphoriaEngine.exe as this engine will be used for many games to come (hopefully)
	* Changed intro graphic
	* Made the engine version a cvar
	* Added the time of build to the version cvar
	* Renamed many gamedll functions for consistency
	* Wrote a tool to generate an updateinfo.json file automatically:
		* Changed the updater to use automatically generated updateinfo.json files
	* Made the time text larger, removed "Time: " and moved it downwards
	* Engine limits: Increased MAX_GLTEXTURES from 1024 to 2048
	* Added arbitrary colour to text, not just color codes (color codes still override the set text colour if they are found within the text)

BUG FIXES:
	* Fixed the game crashing on minimise
		* Don't try and render if resolution width or height are zero
	* Fixed updater (TODO BEFORE RELEASE: TEST)
	* Fixed font list not being loaded from pak file
	* Fixed FUBAR'd Bahnschrift Bold and Regular 18 fonts (their jsons got mixed)
	* Fixed obtaining the size of multi-line text (all lines were being treated as one)
	* Fixed a bug where power armor effects were never applied
	* Fixed server being hardcoded to 10Hz tick rate regardless of the actual tickrate
	* Fixed ability to press arrow keys in legacy UI fields
	* Fixed MSBuild warning generated by build path not having a trailing slash
	* Fixed UI not being reset when disconnecting from server
	* Fixed the window pointer being used as the GLFW error callback because of inability to read documentation